<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginLeft="10dp"
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textAbilita"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/inputAbilita"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="number"
            android:textAlignment="center">

            <requestFocus />

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textResistenza"
        android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/inputResistenza"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="number"
            android:textAlignment="center">

        </EditText>

    </LinearLayout>

</LinearLayout>